# waywall

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
.cargo/: config.toml
src/: decoder.rs  frame_queue.rs  main.rs
src/app/: bootstrap.rs  state.rs
src/cli/: args.rs
src/mpv/: callbacks.rs  events.rs  init.rs
src/render/: egl.rs  frame.rs  mpv_render.rs  state.rs
src/runtime/: event_loop.rs  signals.rs  wakeup.rs
src/wayland/: callbacks.rs  dispatch.rs  raw.rs  surfaces.rs
